--- a/src/components/Stepper.css
+++ b/src/components/Stepper.css
@@ -25,15 +25,15 @@
     width: 100%;
     /*max-width: 28rem;*/
     border-radius: 2rem;
-    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-      0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    box-shadow: 0 20px 25px -5px rgba(241, 239, 239, 0.1),
+      0 10px 10px -5px rgba(234, 228, 228, 0.04);
   }
   
   .step-indicator-row {
     display: flex;
     overflow-x: auto;    /* scroll if too many */
     padding: 2rem;
-    gap: 1rem;
+    gap: 0rem;
   }
   
   .step-content-default {
@@ -67,7 +67,7 @@
   
   .back-button {
     transition: all 350ms;
-    border-radius: 0.25rem;
+    border-radius: 6.25rem;
     padding: 0.25rem 0.5rem;
     color: #a3a3a3;
     cursor: pointer;
@@ -89,7 +89,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 9999px;
-    background-color: #00d8ff;
+    background-color: #ffffff;
     color: #060606;
     font-weight: 500;
     letter-spacing: -0.025em;
@@ -98,7 +98,7 @@
   }
   
   .next-button:hover {
-    background-color: #00d8ff;
+    background-color: #77DD77;
   }
   
   .next-button:active {
@@ -121,26 +121,27 @@
     font-weight: 600;
   }
   
+  
   .active-dot {
     height: 0.75rem;
     width: 0.75rem;
     border-radius: 9999px;
-    background-color: #060606;
+    background-color: #ffffff;
   }
   
   .step-number {
-    font-size: 0.875rem;
+    font-size: 1.2rem;
   }
   
   .step-connector {
     position: relative;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
     height: 0.125rem;
     flex: 1;
     overflow: hidden;
     border-radius: 0.25rem;
-    background-color: #52525b;
+    background-color: #2e2a2a;
   }
   
   .step-connector-inner {
@@ -153,5 +154,5 @@
   .check-icon {
     height: 1rem;
     width: 1rem;
-    color: #000;
+    color: #000000;
   }
