--- a/src/routes/SignIn.css
+++ b/src/routes/SignIn.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: #e6f9e5;
+  background: #77DD77;
 }
 
 .signin-card {
